Update some information, including homepage, author, license, etc

--- a/metadata.desktop
+++ b/metadata.desktop
@@ -14,9 +14,9 @@ X-Plasma-RequiredExtensions=LaunchApp
 X-KDE-PluginInfo-Author=Gao Xiang
 X-KDE-PluginInfo-Email=qasdfgtyuiop@gmail.com
 X-KDE-PluginInfo-Name=add events to calendar to remind your repeat something. 
-X-KDE-PluginInfo-Version=0.1
-X-KDE-PluginInfo-Website=
-X-KDE-PluginInfo-Category=
-X-KDE-PluginInfo-Depends=
+X-KDE-PluginInfo-Version=1.0
+X-KDE-PluginInfo-Website=https://github.com/zasdfgbnm/Repeat-Plan
+X-KDE-PluginInfo-Category=Office
+X-KDE-PluginInfo-Depends=kdepim
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=true
