fix error in X-KDE-PluginInfo-Name

--- a/metadata.desktop
+++ b/metadata.desktop
@@ -13,7 +13,7 @@ X-Plasma-RequiredExtensions=LaunchApp
  
 X-KDE-PluginInfo-Author=Gao Xiang
 X-KDE-PluginInfo-Email=qasdfgtyuiop@gmail.com
-X-KDE-PluginInfo-Name=add events to calendar to remind your repeat something. 
+X-KDE-PluginInfo-Name=repeat-plan 
 X-KDE-PluginInfo-Version=1.0
 X-KDE-PluginInfo-Website=https://github.com/zasdfgbnm/Repeat-Plan
 X-KDE-PluginInfo-Category=Office
